# saw-mcp

./: .env.example  .gitignore  .mcp.json  AGENTS.md  AppBuilder.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  USER_GUIDE.md  catalog-info.yaml  prompts.md  pyproject.toml  requirements.txt  server.json
.circleci/: config.yml
.claude/: settings.json
.cursor-plugin/: plugin.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  cla.yml  release.yml  security.yml
config/: SKILL.md  config.yaml.dist  saw_rules.md  saw_rules.mdc
config/skills/saw-api-target-configuration/: SKILL.md
config/skills/saw-web-target-configuration/: SKILL.md
config/skills/saw-web-target-configuration/references/: extra-hosts.md  logout-detection.md  sequence-format.md
config/skills/saw-web-target-configuration/scripts/: extract-api-hosts.js  inspect-login-form.js
docs/installation-guides/: README.md  install-claude.md  install-cursor.md  install-devin.md  install-vscode.md  install-windsurf.md
scripts/: dev.sh  inspector.sh  package.sh  setup-env.sh  setup-playwright.sh  smoke-test-playwright.sh
snyk_apiweb/: __init__.py  audit.py  config.py  confirmation_messages.py  probely_client.py  server.py  tools.py
tests/: conftest.py  test_audit.py  test_config.py  test_confirmation.py  test_probely_client.py  test_tools.py
