[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snyk-apiweb-mcp"
version = "0.9.2"
description = "MCP server for Snyk API&Web (Probely) — create targets, run scans, manage findings"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Snyk" }]
keywords = ["mcp", "snyk", "probely", "security", "dast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.32.3",
    "urllib3>=2.6.3",
    "pydantic>=2.8.2",
    "PyYAML>=6.0.2",
    "typer>=0.12.5",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[tool.setuptools.packages.find]
include = ["snyk_apiweb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]        # Line too long; tighten later

[tool.ruff.format]
quote-style = "double"
