[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snyk-apiweb-mcp"
version = "1.1.2"
description = "MCP server for Snyk API & Web (Probely) — create targets, run scans, manage findings"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Snyk" }]
keywords = ["mcp", "snyk", "probely", "security", "dast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.32.3",
    "urllib3>=2.6.3",
    "pydantic>=2.8.2",
    "PyYAML>=6.0.2",
    "typer>=0.12.5",
    "tenacity>=8.5.0",
]

[project.scripts]
saw-mcp = "snyk_apiweb.server:main"

[project.urls]
Homepage = "https://github.com/snyk/saw-mcp"
Repository = "https://github.com/snyk/saw-mcp"
"Bug Tracker" = "https://github.com/snyk/saw-mcp/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[tool.setuptools.packages.find]
include = ["snyk_apiweb*"]
exclude = ["config*", "tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]        # Line too long; tighten later

[tool.ruff.format]
quote-style = "double"
